AAA Legacy/v2.0/changelog.md
# 1.0 - Initial features
- Zoom
- Change Background Color
- Transparent Export + Bulk Export
- Singular/All/Custom frame number preview
- Fashion palette exporter (for fun! :3c )
- All characters supported
- All jobs supported
- All vanilla (and custom, technically!) hair supported
- Debugging preview supported
- All fashion automatically sorts and categorizes by index
- All custom fashion is automatically marked as (C)
- Arrow keys to change the frames quickly (or buttons if you like!)

# 1.1 - Emergency Bugfix
- Fixed directory issue
- Fixed background coloring issue in All/Custom preview
- Added proper readme
- Added changelog
- Added new launcher debugger
- Added bat file for launching

# 2.0 - Straight Jump to the Next Level
- Pal Live Editing and Saving
- Multiselect for Pal Saving
- Bugfixes with Dragon 3rd Job UI